# sms-foundation-agent

./: .env.railway.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  env.railway.example  pyproject.toml  railway.json  requirements.txt  sms-foundation-spec_9-22-25.md
alembic/: env.py
alembic/versions/: 20250926_01_init_conversations_messages.py  20250927_02_outbound_fields.py
docs/: architecture.md  prd.md
docs/architecture/: coding-standards.md  components.md  data-models.md  error-handling-strategy.md  high-level-architecture.md  index.md  infrastructure-and-deployment.md  introduction.md  project-structure.md  tech-stack.md
docs/prd/: checklist-results-report.md  documentation.md  epic-1-details-foundation-inbound-webhooks.md  epic-2-details-tenant-identification-conversations.md  epic-3-details-outbound-send-delivery-tracking.md  epic-4-details-documentation-developer-experience.md  epics-overview.md  goals-and-background-context.md  index.md  requirements.md  sms-foundation-agent-product-requirements-document-prd.md  technical-assumptions.md
docs/stories/: 1.1.project-scaffold-and-health-check.md  1.2.twilio-sms-webhook-receiver.md  1.3.idempotency-by-messagesid.md  1.4.persist-inbound-messages-and-conversations-language-detection.md  2.1.phone-normalization-and-tenant-lookup.md  2.2.conversation-retrieval-endpoint.md  2.3.language-preference-persistence.md  2.4.unknown-number-handling-and-later-reconciliation.md  3.1.outbound-send-endpoint.md  (+3 more)
src/: main.py
tests/: conftest.py
(+55 files in other folders)
