[project]
name = "sms-foundation-agent"
version = "0.1.0"
description = "SMS Foundation Agent service"
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "Team" }]

dependencies = [
  "fastapi>=0.111,<0.112",
  "uvicorn[standard]>=0.30,<0.31",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.5,<3",
  "structlog>=24.1,<25",
  "sqlalchemy>=2.0,<3",
  "aiosqlite>=0.19,<1",
  "greenlet>=3.0,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4,<9",
  "pytest-asyncio>=0.23,<0.24",
  "httpx>=0.27,<0.28",
  "mypy>=1.10,<2",
  "ruff>=0.6,<0.7",
  "black>=24.1,<25",
  "isort>=5.13,<6",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"
extend-select = ["I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = ["venv/"]
